[package]
name = "vault"
version = "0.1.0"
description = "Solana Anchor Vault — portfolio project C"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang   = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl    = { version = "1.0.2", features = ["token", "associated_token"] }

[dev-dependencies]
proptest = "1"
